Corrigida importação do "popup.css" e "popup.js"

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="popup.css">
+	<link rel="stylesheet" href="../styles/popup.css">
 </head>
 <body>
 	<h1>Set Discord Activity</h1>
@@ -83,6 +83,6 @@
 		</div>
 		<button id="updatebtn" data-message="activityUpdate"></button>
 	</div>
-	<script src="popup.js"></script>
+	<script src="../js/popup.js"></script>
 </body>
 </html>
